--- a/app/src/styles/core_styles/_links.scss
+++ b/app/src/styles/core_styles/_links.scss
@@ -22,7 +22,7 @@ a {
   }
 
   &-lg {
-    color: $color-alt-default;
+    color: $color-alt;
     margin: 0;
     padding: 0;
     font-size: $type-h3;
