--- a/app/src/styles/core_styles/_common.scss
+++ b/app/src/styles/core_styles/_common.scss
@@ -15,6 +15,14 @@ html {
 
 }
 
+.img-jump {
+  // animation-name: pulse;
+  // animation-duration: 0.1s;
+  // animation-timing-function: linear;
+  // animation-direction: normal;
+  // animation-iteration-count: 2;
+  // animation-play-state: inherit;
+}
 
 
 html,
@@ -33,9 +41,12 @@ body {
   flex-direction: column;
   padding: 72px;
 
-  div {
-    min-width: 475px;
-  }
+ 
+
+  // div {
+  //   min-width: 475px;
+  //   width: 100%;
+  // }
 
   a {
     border-radius: $radius-round;
@@ -44,34 +55,20 @@ body {
     font-weight: $regular;
     padding: 6px 24px;
     font-size: $type-xxs;
+    background: transparent;
 
     &:hover {
-      background: $color-alt-default;
+      background: $color-alt;
       color: $color-white;
     }
 
-  }
 
-  #selected {
-      border-radius: $radius-round;
-      border: 1px solid $color-alt;
-      color: $color-white;
-      font-weight: $regular;
-      padding: 6px 24px;
-      font-size: $type-xxs;
-      background: $color-alt-default;
-      
-      &:hover {
-        background: $color-alt;
-        color: $color-white;
-      }
-  
   }
 
   &-1 {
     @extend .quadrant;
-    left: 0;
-    right: 50%;
+    left: 48px;
+    right: auto;
     top: 0;
     bottom: 50%;
     justify-content: center;
@@ -79,22 +76,28 @@ body {
     text-align: left;
     align-items: center;
     justify-content: flex-start;
+    margin-right: 48px;
+
+    
   }
 
   &-2 {
     @extend .quadrant;
-    left: 50%;
-    right: 0;
+    left: auto;
+    right: 48px;
     top: 0;
     bottom: 50%;
     text-align: right;
     align-items: center;
     justify-content: flex-start;
+    margin-left: 48px;
+
   }
+
   &-3 {
     @extend .quadrant;
-    left: 0;
-    right: 50%;
+    left: 48px;
+    right: auto;
     top: 50%;
     bottom: 0;
     justify-content: center;
@@ -102,17 +105,133 @@ body {
     text-align: left;
     align-items: center;
     justify-content: flex-start;
+    margin-right: 48px;
+
+  }
+
+  &-3b {
+    @extend .quadrant;
+    left: 48px;
+    right: auto;
+    top: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: left;
+    align-items: center;
+    justify-content: flex-start;
+    margin-right: 48px;
+
   }
 
   &-4 {
     @extend .quadrant;
-    left: 50%;
-    right: 0;
+    left: auto;
+    right: 48px;
     top: 50%;
     bottom: 0;
     text-align: right;
     align-items: center;
     justify-content: flex-start;
+    margin-left: 48px;
+
+  }
+  &-4b {
+    @extend .quadrant;
+    left: auto;
+    right: 48px;
+    top: 0;
+    bottom: 0;
+    text-align: right;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 48px;
+
+  }
+
+  &-select {
+
+    position: absolute;
+    // transform: translate(-50%);
+    transition: all .3s ease;
+    position: absolute;
+
+    
+
+    &-1 {
+      @extend .quadrant-select;
+      top: 0;
+      bottom: 20%;
+      width: 100%;
+      left: 30%;
+      div {
+        color: $color-gray-darkest;
+        display: flex;
+        flex-direction: column;
+        padding: 72px;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+    }
+
+    &-2 {
+      @extend .quadrant-select;
+      top: 0;
+      bottom: 20%;
+      width: 100%;
+      left: 0;
+      right: 30%;
+      div {
+        color: $color-gray-darkest;
+        display: flex;
+        flex-direction: column;
+        padding: 72px;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+    }
+
+    &-3 {
+      @extend .quadrant-select;
+      top: 50%;
+      bottom: 20%;
+      width: 100%;
+      left: 30%;
+      div {
+        color: $color-gray-darkest;
+        display: flex;
+        flex-direction: column;
+        padding: 72px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+      }
+    }
+
+    &-4 {
+      @extend .quadrant-select;
+      top: 50%;
+      bottom: 0;
+      width: 100%;
+      left: 0;
+      right: 30%;
+      div {
+        color: $color-gray-darkest;
+        display: flex;
+        flex-direction: column;
+        padding: 72px;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
+    }
+
+    &-0 {
+      position: unset;
+    }
+
   }
 }
 
@@ -151,31 +270,79 @@ body {
 
   &-lineY {
     animation: delayGrowY;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     animation-timing-function: linear;
     animation-direction: normal;
     animation-fill-mode: forwards;
     animation-play-state: inherit;
-    animation-delay: 5.8s;
+    animation-delay: .2s;
     height: 0;
     content: "";
     position: absolute;
     z-index: -1;
     top: 0;
+    right: 0;
     bottom: 0;
     left: 50%;
-    border-left: 1px solid $color-gray-slight;
+    border-left: 1px solid $color-blue-light;
     transform: translate(-50%);
+    transition: all .3s ease;
+
+
+    &-q0 {
+      @extend .flex-container-lineY;
+      top: 0;
+      right: 50%;
+      bottom: 0;
+      left: 50%;
+      transition: all .3s ease;
+    }
+
+    &-q1 {
+      @extend .flex-container-lineY;
+      top: 0;
+      bottom: 0;
+      left: 95%;
+      right: 5%;
+      transition: all .3s ease;
+    }
+
+    &-q2 {
+      @extend .flex-container-lineY;
+      top: 0;
+      bottom: 0;
+      left: 5%;
+      right: 95%;
+      transition: all .3s ease;
+    }
+
+    &-q3 {
+      @extend .flex-container-lineY;
+      top: 0;
+      bottom: 0;
+      left: 95%;
+      right: 5%;
+      transition: all .3s ease;
+    }
+
+    &-q4 {
+      @extend .flex-container-lineY;
+      top: 0;
+      bottom: 0;
+      left: 5%;
+      right: 95%;
+      transition: all .3s ease;
+    }
   }
 
   &-lineX {
     animation: delayGrowX;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     animation-timing-function: linear;
     animation-direction: normal;
     animation-fill-mode: forwards;
     animation-play-state: inherit;
-    animation-delay: 6s;
+    animation-delay: 0s;
     width: 0;
     content: "";
     position: absolute;
@@ -184,7 +351,54 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    border-top: 1px solid $color-gray-slight;
+    border-top: 1px solid $color-blue-light;
+    transition: all .3s ease;
+
+    &-q0 {
+      @extend .flex-container-lineX;
+      top: 50%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transition: all .3s ease;
+    }
+
+    &-q1 {
+      @extend .flex-container-lineX;
+      top: 90%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transition: all .3s ease;
+    }
+
+    &-q2 {
+      @extend .flex-container-lineX;
+      top: 90%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transition: all .3s ease;
+    }
+
+    &-q3 {
+      @extend .flex-container-lineX;
+      top: 5%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transition: all .3s ease;
+    }
+
+    &-q4 {
+      @extend .flex-container-lineX;
+      top: 5%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transition: all .3s ease;
+    }
+
   }
 
 
@@ -201,8 +415,76 @@ body {
   display: flex;
   padding: 0;
   margin: 0;
-}
+  position: absolute;
+  top: calc(50% - 36px);
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
+  pointer-events: none;
+  transition: all .3s ease;
 
+  &-q0 {
+    text-align: center;
+    height: auto;
+    justify-content: center;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: calc(50% - 36px);
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
+    transition: all .3s ease;
+
+    img {
+      cursor: pointer;
+      transform: scale(1);
+      transition: $transition-scale;
+
+      &:hover {
+        transform: scale(1.1);
+        transition: $transition-scale;
+      }
+    }
+  }
+
+  &-q1 {
+    @extend .flex-item-q0;
+
+    top: calc(90% - 36px);
+    right: 5%;
+    bottom: 0;
+    left: 95%;
+
+  }
+
+  &-q2 {
+    @extend .flex-item-q0;
+    top: calc(90% - 36px);
+    left: 5%;
+    bottom: 0;
+    right: 95%;
+
+  }
+  
+  &-q3 {
+    @extend .flex-item-q0;
+    top: calc(5% - 36px);
+    left: 95%;
+    bottom: 90%;
+    right: 5%;
+    
+  }
+  &-q4 {
+    @extend .flex-item-q0;
+    top: calc(90% - 36px);
+    left: 5%;
+    top: 0%;
+    right: 95%;
+
+  }
+}
 
 
 .nudge {
