--- a/app/src/styles/core_styles/_common.scss
+++ b/app/src/styles/core_styles/_common.scss
@@ -258,7 +258,7 @@ body {
 
   &-lineY {
     animation: delayGrowY;
-    animation-duration: 0.3s;
+    animation-duration: 0.6s;
     animation-timing-function: ease;
     animation-direction: normal;
     animation-fill-mode: forwards;
@@ -320,12 +320,12 @@ body {
 
   &-lineX {
     animation: delayGrowX;
-    animation-duration: 0.3s;
+    animation-duration: 0.6s;
     animation-timing-function: ease;
     animation-direction: normal;
     animation-fill-mode: forwards;
     animation-play-state: inherit;
-    animation-delay: 0s;
+    animation-delay: .7s;
     width: 0;
     content: "";
     position: absolute;
