--- a/app/src/styles/core_styles/_fonts.scss
+++ b/app/src/styles/core_styles/_fonts.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
 
 // @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 // @import url("https://use.fontawesome.com/releases/v5.13.0/css/all.css");
