--- a/app/src/styles/core_styles/_vars.scss
+++ b/app/src/styles/core_styles/_vars.scss
@@ -6,6 +6,8 @@ $font-alt: "Montserrat", Helvetica, Arial, sans-serif, -apple-system;
 $font-awesome: "Font Awesome 6 Pro", "Font Awesome 6 Free", "FontAwesome", "Material Icons";
 
 
+$ultra: 200;
+$light: 300;
 $default: 400;
 $regular: 500;
 $bold: 600;
@@ -15,12 +17,13 @@ $radius-default: 4px;
 $radius-module: 6px;
 $radius-slight: 2px;
 
-$type-h1: 24px;
+$type-h1: 28px;
+$type-menu: 19px;
 $type-h2: 18px;
 $type-h3: 15px;
 $type-h4: 13px;
 $type-huge: 36px;
-$type-massive: 60px;
+$type-massive: 46px;
 $type-metric: 35px;
 $type-lg: 21px;
 $type-xl: 28px;
