--- a/app/src/styles/core_styles/_footer.scss
+++ b/app/src/styles/core_styles/_footer.scss
@@ -19,19 +19,18 @@
     align-items: center;
 
     a {
-      padding: 6px 24px;
+      padding: 6px 48px;
       border-radius: $radius-default;
-      font-size: $type-xxs;
+      font-size: $type-default;
       font-weight: $regular;
       margin: 0 36px 0 0;
       background: transparent;
-      color: $color-gray-darkest;
+      color: $color-gray-dark;
       border: 1px solid $color-gray-half;
       transition: $transition-background;
       
       &:hover {
         transition: $transition-background;
-        background: $color-white;
         border: 1px solid $color-gray-darkest;
         color: $color-gray-darkest;
        
