--- a/app/src/styles/core_styles/_footer.scss
+++ b/app/src/styles/core_styles/_footer.scss
@@ -42,14 +42,32 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-size: $type-default;
+    font-size: $type-xxs;
     font-weight: $default;
     color: $color-gray-darkest;
     text-transform: none;
 
+
+    a {
+      font-size: $type-xxs;
+      font-weight: $regular;
+      margin: 0 36px 0 0;
+      color: $color-red-default;
+      font-weight: $regular;
+      text-decoration: none;
+      transition: $transition-background;
+      
+      &:hover {
+        text-decoration: underline;
+        color: $color-red;
+       
+      }
+    }
+
+
     i {
       color: $color-red;
-      font-size: $type-default;
+      font-size: $type-xxs;
       padding: 0 6px;
     }
   }
