--- a/app/src/styles/core_styles/_common.scss
+++ b/app/src/styles/core_styles/_common.scss
@@ -29,21 +29,22 @@ body {
   user-select: none;
 }
 
+.full {
+  cursor: pointer;
+  margin: 0 0 36px 0;
+ h1 {
+  $font-weight: $regular;
+ }
+}
+
 .subtle {
   cursor: pointer;
   margin: 0 0 36px 0;
-
-
   h1 {
-    opacity: 1;
+   $font-weight: $default;
   }
 
-  &:hover {
-    h1 {
-      opacity: 1;
 
-    }
-  }
 }
 
 .pull-quote {
@@ -71,16 +72,20 @@ body {
 }
 
 .paragraph {
-  margin: 24px 0 24px 0;
+  margin: 0 0 24px 0;
   position: relative;
+
+  h1 {
+    font-size: $type-h1;
+    color: $color-gray-darker;
+    font-weight: $light;
+    padding: 0 0 12px 0;
+  }
+
 }
 
 
-.full {
-  cursor: pointer;
-  margin: 0 0 36px 0;
-  font-weight: $regular;
-}
+
 
 .divide {
   background: $color-red-default;
@@ -98,18 +103,10 @@ body {
 
 section {
 
+  text-align: left;
   display: flex;
-  padding: 0 12% 144px 12%;
   justify-content: center;
-  flex-direction: column;
-
-
-  h1 {
-    font-size: $type-h1;
-    color: $color-gray-darker;
-    font-weight: $light;
-  }
-
+  padding: 48px 84px 0 84px;
 
   .left {
     display: inline-flex;
@@ -132,7 +129,7 @@ section {
     }
 
   }
-
+  
   .right {
     display: flex;
     padding: 0 24px;
@@ -141,24 +138,7 @@ section {
     flex-direction: column;
 
     .links {
-      margin-top: 24px;
-
-      a {
-        border: 1px solid $color-gray-half;
-        color: $color-gray-dark;
-        padding: 6px 48px;
-        border-radius: $radius-default;
-
-        i {
-          font-size: $type-copy;
-        }
-
-        &:hover {
-          border: 1px solid $color-gray-darkest;
-          color: $color-gray-darkest;
-
-        }
-      }
+      margin-bottom: 24px;
     }
 
 
@@ -168,7 +148,7 @@ section {
       padding: 0;
       margin: 0 0 12px 0;
     }
-
+    
 
     a {
       color: $color-gray-darkest;
@@ -183,15 +163,15 @@ section {
       cursor: pointer !important;
       text-transform: uppercase;
       transition: $transition-border;
-
+      
       &:hover {
         transition: $transition-border;
         // border: 1px solid $color-gray-darkest;
       }
     }
-
-
-
+  
+  
+  
     h2 {
       font-size: $type-h1;
       color: $color-gray-darker;
@@ -205,19 +185,19 @@ section {
     li {
       padding: 0 0 12px 0;
       margin-left: 16px;
-
+      
     }
-
-
+    
+    
     ul>li {
       font-size: $type-copy;
       color: $color-gray-darker;
       list-style: circle;
-
-
+    
+  
     }
 
-
+  
   }
 
 
@@ -251,7 +231,7 @@ section {
     flex: 1;
     align-items: center;
     justify-content: flex-start;
-    max-width: 465px;
+    max-width: 410px;
     cursor: pointer;
 
     img {
