--- a/app/src/styles/core_styles/_effects.scss
+++ b/app/src/styles/core_styles/_effects.scss
@@ -1,7 +1,7 @@
 .fade-in {
   opacity: 0;
   animation: fadeIn;
-  animation-duration: 0.5s;
+  animation-duration: 0.3s;
   animation-timing-function: linear;
   animation-direction: normal;
   animation-fill-mode: forwards;
@@ -125,6 +125,19 @@
 @keyframes slideIn {
   0% {
     transform: translateY(100%);
+
+  }
+
+  100% {
+    transform: translateY(0);
+
+  }
+
+}
+
+@keyframes slideMinor {
+  0% {
+    transform: translateY(10px);
 
   }
 
