--- a/app/src/styles/core_styles/_effects.scss
+++ b/app/src/styles/core_styles/_effects.scss
@@ -1,8 +1,8 @@
 .fade-in {
   opacity: 0;
   animation: fadeIn;
-  animation-duration: 0.3s;
-  animation-timing-function: linear;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
   animation-direction: normal;
   animation-fill-mode: forwards;
   animation-play-state: inherit;
